spacing issues fixed

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -25,15 +25,19 @@ body {
 
 .photo {
   margin: 10px 0 10px 0;
+    padding-left: 0px;
 }
 
 /******************************* Header & Footer **********************************/
 .navbar-default,
-.footer {
+footer {
     border-color: transparent;
-    background-color: #EEEEEE;
+    background-color:#EEEEEE;
 }
 
+footer {
+    height:60px;
+}
 .navbar-default .navbar-brand {
     text-transform: uppercase;
     font-size: 1.5em;
@@ -48,10 +52,9 @@ body {
 .navbar-default .nav li a {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 1px;
     margin: 20px; 20px;
-/*    color: #424242; ????????????*/
 }
 
 /******************************* Media Queries **********************************/
